Apr 21, 2004

  * ADDED: Support for xml:lang and rdf:dataType attributes.

  * INTERNAL: Use global variables rather than assert/retract for
    keeping track of the state for process_rdf/3.

Nov 29, 2003

  * ADDED: warning for incorrect and multiple definitions of rdf:ID.
    Maarten Menken.

Nov 7, 2003

  * ADDED: process_rdf/3: allow processing from a stream

Oct 6, 2003

  * MODIFIED: synopsis of process_rdf/3 to
    process_rdf(+File, :OnTriples, +Options) for consistency and to allow
    extending the option list.  Old calls are mapped to the new.

  * Added option blank_nodes(share) to load_rdf/3 and process_rdf/3.

Aug 18, 2003

  * Guarantee that anonymous ids start with __

Mar 20, 2003

  * Fixed exception in cleanup.  Dominique de Waleffe.

Feb 28, 2003

  * ADDED: Use BaseURI to create non-conflicting anonymous resources.

  * FIXED: rdf_parser:global_id to ignore xml:base for absolute URIs

Jan 17, 2003

  * FIXED: online.pl (web frontend) to avoid using goal/1 option for the
    xml parser.  Now uses 4.0.8 clib memfile library primitives.

  * FIXED: process_rdf/3, Peter Marks.

  * ADDED: parseType="Collection", satisfying the W3C Working Draft
    8 November 2002.

################################################################
# Sumary of incompatibilities:
#
#	Many problems in nested bag handling, changing output of
#	suite/t5.rdf
#
#	Content of Alt-container was incorrectly rendered as rdf:li
#	instead of rdf:_1, rdf:_2, etc (suite/t27.rdf).
################################################################
	
  * ADDED: Translate rdf:li predicates into _1, _2, etc.

  * FIXED: parseType=Literal to avoid extraneous [..] around the value

Oct 28, 2002

  * CLEANUP: pass base-uri as attribute, preparing for xml:base and making
    the parser ready for multi-threading.

Sep 16, 2002 

  * MODIFIED: Allow for unqualified attribute-names

  * ADDED: "make check"

Older entries

  * FIXED: Type-exception in atom_chars/2
